<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/gestaoFragment"
            android:icon="@drawable/ic_admin"
            android:title="@string/admin_dashboard"/>

        <item
            android:id="@+id/listaUtilizadoresFragment"
            android:icon="@drawable/ic_users"
            android:title="@string/admin_utilizadores"/>

        <item
            android:id="@+id/listaIntencoesFragment"
            android:icon="@drawable/ic_list"
            android:title="@string/admin_intencoes"/>

        <item
            android:id="@+id/adicionarAnimalFragment"
            android:icon="@drawable/ic_add"
            android:title="@string/admin_add_animal"/>
    </group>
</menu>
