<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.activity.GestaoFragment"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnAdicionarAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_add_animal" />

        <Button
            android:id="@+id/btnListarAnimais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/admin_list_animals" />

        <Button
            android:id="@+id/btnListarUtilizadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/admin_list_users" />

        <Button
            android:id="@+id/btnListarIntencoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/admin_list_intents" />

        <Button
            android:id="@+id/btnListarAdocoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/admin_final_adoptions" />

           </LinearLayout>

</FrameLayout>