<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.activity.ListaIntencoesFragment">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_adoption_intents_list"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIntencoes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/txtSemIntencoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_adoption_intents"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_gravity="center"
        android:padding="16dp"/>


    <Button
        android:id="@+id/btnVoltarHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_back"
        android:layout_marginTop="8dp" />

</LinearLayout>
